footer and colors

--- a/global.css
+++ b/global.css
@@ -3,14 +3,9 @@
 
     --nav-color: #F7F6FF;
 
-    --logo-underline-color: #C4C4C4;
+    --primary-grey: #C4C4C4;
 
-    --button-background-color: #C4C4C4;
-    --nav-text-color: #C4C4C4;
+    --primary-blue: #02577A;
 
-    --footer-border-color: #02577A;
-    --footer-text-color: #02577A;
-
-    --active-button-background-color: #FFF;
-    --active-button-text-color: #02577A;
+    --white: #FFF;
 }
