--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,6 +2,7 @@ body {
     background-color: #777;
     height: 100vh;
     display: flex;
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav {
@@ -11,7 +12,8 @@ nav {
     background-color: var(--nav-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: width 400ms;
-    font-family: 'Montserrat', sans-serif;
+    overflow: hidden;
+    position: fixed;
 }
 
 nav:hover {
@@ -20,7 +22,7 @@ nav:hover {
 }
 
 nav > div {
-    border-bottom: 2px solid var(--logo-underline-color);
+    border-bottom: 2px solid var(--primary-grey);
     margin-left: 18px;
     margin-right: 18px;
     margin-top: 44px;
@@ -36,6 +38,7 @@ nav:hover > div {
 nav > a > span {
     opacity: 0;
     transition: opacity 400ms;
+    width: 0px;
 }
 
 nav:hover > a > span {
@@ -62,15 +65,15 @@ nav:hover > a > span {
 }
 
 .nav-elements:active {
-    background-color: var(--active-button-background-color);
+    background-color: var(--white);
     border-radius: 50px 0 0 50px;
     margin-left: 11px;
     padding-left: 32px;
-    color: var(--active-button-text-color);
+    color: var(--primary-blue);
 }
 
 .nav-elements:active > div > .icon > path {
-    fill: var(--active-button-text-color);
+    fill: var(--primary-blue);
 }
 
 .icon {
@@ -78,14 +81,24 @@ nav:hover > a > span {
     flex: 0 0 auto;
 }
 
-nav > img {
-
+body > div {
+    width: 100%;
+    align-self: flex-end;
 }
 
-.nav-text {
-   
+footer {
+    padding: 11px;
+    margin-left: calc(50% - 173px);
+    display: flex; 
 }
 
-.nav-text:hover {
-    
+footer > span {
+    width: 346px;
+    font-size: 11px;
+    font-weight: 500;
+    color: var(--primary-blue);
+    padding: 11px;
+    border-top: 1px solid var(--primary-blue);
+    display: flex; 
+    justify-content: center;
 }
