--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,8 +1,9 @@
 body {
-    background-color: #777;
+    background-color: var(--background-color);
     height: 100vh;
     display: flex;
     font-family: 'Montserrat', sans-serif;
+    flex-direction: column;
 }
 
 nav {
@@ -81,9 +82,9 @@ nav:hover > a > span {
     flex: 0 0 auto;
 }
 
-body > .footer-container {
+.footer-container {
     width: 100%;
-    align-self: flex-end;
+    background-color: pink;
 }
 
 footer {
